--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.6",
-		"react-native": "0.43.3"
+		"react-native": "0.43.3",
+		"url-search-params": "^0.7.0"
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
