--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
 	"dependencies": {
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.43.3",
+		"react-navigation": "1.0.0-beta.8",
+		"react-redux": "^5.0.4",
+		"redux": "^3.6.0",
+		"redux-logger": "^3.0.1",
+		"redux-promise-middleware": "^4.2.0",
+		"redux-thunk": "^2.2.0",
 		"url-search-params": "^0.7.0"
 	},
 	"devDependencies": {
