--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react-redux": "^5.0.4",
 		"redux": "^3.6.0",
 		"redux-logger": "^3.0.1",
+		"redux-persist": "^4.6.0",
 		"redux-promise-middleware": "^4.2.0",
 		"redux-thunk": "^2.2.0",
 		"url-search-params": "^0.7.0"
